# slice_ops

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
src/: lib.rs  padded.rs  padded_slice.rs  slice_ops_.rs
src/future/: actions.rs  mod.rs
src/join/: actions.rs  error_race.rs  maybe_done.rs  mod.rs  try_actions.rs
src/ops/: add_assign.rs  argminmax.rs  argreduce.rs  bitand_assign.rs  bitor_assign.rs  bitxor_assign.rs  differentiate.rs  div_assign.rs  find.rs  integrate.rs  magnitude.rs  mod.rs  mul_assign.rs  neg_assign.rs  not_assign.rs  permute.rs  rem_assign.rs  shift.rs  shl_assign.rs  shr_assign.rs  split.rs  spread.rs  sub_assign.rs  trim.rs  visit.rs
src/private/: boxed.rs  mod.rs
src/spec/: conj.rs  mod.rs  square.rs
