[package]
name = "slice_ops"
version = "1.0.1"
edition = "2021"
license = "MIT"
keywords = ["slice", "util", "ops"]
categories = ["rust-patterns", "no-std::no-alloc"]
description = "A selection of useful slice operations."
repository = "https://github.com/sigurd4/slice_ops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
moddef = "0.2.6"
slice_trait = "0.1.3"
#option_trait = "0.1.16"

[dev-dependencies]
tokio-test = "0.4.4"